--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,9 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/app/core/json-files/categories.json",
+              "src/app/core/json-files/products.json"
             ],
             "styles": [
               "src/styles.css",
